# korean-rnd-regs-mcp

./: .dockerignore  .gitignore  CHANGELOG.md  Dockerfile  LICENSE  README.md  SECURITY.md  env.example  fly.toml  pyproject.toml  server.json
.claude-plugin/: marketplace.json  plugin.json
.github/workflows/: tests.yml
docs/: api_contract.md
src/korean_rnd_regs_mcp/: __init__.py  live_api.py  main.py  manifest.py  provision_id.py  rule_sets.yaml
tests/: test_acceptance_spec.py  test_b2_executor.py  test_main.py  test_manifest.py  test_provision_id.py  test_tools.py
tests/acceptance/: README.md  run.py  v0_10_0.py  v0_10_1.py  v0_11_0.py  v0_12_0.py  v0_2_10.py  v0_2_11.py  v0_2_7.py  v0_2_8.py  v0_2_9.py  v0_3_0.py  v0_4_0.py  v0_5_0.py  v0_6_0.py  v0_7_0.py  v0_8_0.py  v0_9_0.py  v0_9_1.py
