[project]
name = "korean-rnd-regs-mcp"
version = "0.1.0"
description = "MCP server for Korean national R&D regulation review (국가연구개발 규정 검토용 MCP 서버)"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "cachetools>=5,<6",
    "fastmcp>=3.3,<4",
    "pydantic>=2,<3",
    "python-dotenv>=1,<2",
    "pyyaml>=6,<7",
    "requests>=2,<3",
]

[project.scripts]
korean-rnd-regs-mcp = "korean_rnd_regs_mcp.main:main"

[project.optional-dependencies]
dev = [
    "build>=1,<2",
    "hatchling>=1,<2",
    "pytest>=8,<9",
    "twine>=5,<7",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/korean_rnd_regs_mcp"]

[tool.pytest.ini_options]
testpaths = ["tests"]
