[project]
name = "korean-rnd-regs-mcp"
version = "0.1.1"
description = "MCP server for Korean national R&D regulation review (국가연구개발 규정 검토용 MCP 서버)"
readme = {file = "README.md", content-type = "text/markdown"}
requires-python = ">=3.11"
license = "Apache-2.0"
license-files = ["LICENSE"]
authors = [
    {name = "Andy Kim", email = "smilemin07@gmail.com"},
]
keywords = [
    "korean-law",
    "regulation",
    "national-rnd",
    "mcp",
    "fastmcp",
    "model-context-protocol",
    "research-development",
    "r-and-d",
    "korea",
    "korean",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Other Audience",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Office/Business",
    "Topic :: Scientific/Engineering",
    "Topic :: Text Processing :: Linguistic",
    "Natural Language :: Korean",
]
dependencies = [
    "cachetools>=5,<6",
    "fastmcp>=3.3,<4",
    "pydantic>=2,<3",
    "python-dotenv>=1,<2",
    "pyyaml>=6,<7",
    "requests>=2,<3",
]

[project.urls]
Homepage = "https://github.com/smilemin07/korean-rnd-regs-mcp"
Repository = "https://github.com/smilemin07/korean-rnd-regs-mcp"
Issues = "https://github.com/smilemin07/korean-rnd-regs-mcp/issues"
Changelog = "https://github.com/smilemin07/korean-rnd-regs-mcp/blob/main/CHANGELOG.md"

[project.scripts]
korean-rnd-regs-mcp = "korean_rnd_regs_mcp.main:main"

[project.optional-dependencies]
dev = [
    "build>=1,<2",
    "hatchling>=1,<2",
    "pytest>=8,<9",
    "twine>=5,<7",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/korean_rnd_regs_mcp"]
# rule_sets.yaml이 wheel 빌드에서 누락되지 않도록 명시.
# packages만 지정 시 hatchling 환경에 따라 yaml이 빠질 수 있어 force-include로 보장.
[tool.hatch.build.targets.wheel.force-include]
"src/korean_rnd_regs_mcp/rule_sets.yaml" = "korean_rnd_regs_mcp/rule_sets.yaml"

[tool.hatch.build.targets.sdist]
# sdist에서 개발 전용 노트는 제외 — README/CHANGELOG/SECURITY/LICENSE만 PyPI 노출.
include = [
    "src/korean_rnd_regs_mcp/**/*.py",
    "src/korean_rnd_regs_mcp/**/*.yaml",
    "tests/**/*.py",
    "docs/**/*.md",
    "README.md",
    "CHANGELOG.md",
    "SECURITY.md",
    "LICENSE",
    "env.example",
    ".gitignore",
    "pyproject.toml",
]
exclude = [
    "CLAUDE.md",
    ".claude/",
    ".claude/**",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
